examples/test/testpolicy9512.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9512
  namespace: namespace221
spec:
  podSelector:
    matchLabels:
      key36: value40
      key34: value20
      key27: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value27
      podSelector:
        matchLabels:
          key29: value7
